--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,11 @@
-//
+// Bootstrap
+@import "~bootstrap";
+
+// Fontawesome
+$fa-font-path: "./fonts/font-awesome" !default;
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/regular";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "~@fortawesome/fontawesome-free/scss/brands";
+
+
